# mymines

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  block.c  game.c  main.c  map.c  render.c
.github/workflows/: codeql-analysis.yml
inc/: block.h  button.h  cursor.h  fatal.h  game.h  map.h  menu.h  net.h  render.h  timer.h
modules/: FindSDL2.cmake
prng_lib/: CMakeLists.txt
prng_lib/inc/: prng_alleged_rc4.h  prng_lcg.h
prng_lib/src/: prng_alleged_rc4.c  prng_lcg.c
src/: CMakeLists.txt  block.c  cursor.c  fatal.c  game.c  main.c  map.c  menu.c  net.c  render.c  timer.c
